2014-07-04  Daniel Colascione  <dancol@dancol.org>

	Backport from trunk.
	* xfns.c (create_frame_xic): Pass XNStatusAttributes to XCreateIC
	only if xic_style calls for it.  This change allows Emacs to work
	with ibus.  Also, don't leak resources if create_frame_xic fails,
	and stop caching xic_style across different displays (Bug#17928).
	(supported_xim_styles): Make const.
	(best_xim_style): Remove first parameter: it's always just
	supported_xim_styles.  Change to look at supported_xim_styles
	directly.

2014-07-04  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_window): If redisplay of a window ends up
	with point in a partially visible line at end of the window, make
	sure the amended position of point actually has smaller Y
	coordinate; if not, give up and scroll the display.  (Bug#17905)

	* window.c (window_scroll_pixel_based): When point ends up at the
	last fully visible line, don't let move_it_to stop at the left
	edge of the line and dupe us into thinking point is inside the
	scroll margin.

	* w32.c (network_interface_info): Make sure the argument is a
	Lisp string.

2014-07-01  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (prepare_desired_row): Accept 2 additional arguments:
	the window whose glyph row is being prepared and a flag whether it
	is for mode/header line.  Make sure the glyph row's marginal areas
	are in sync with what the window wants.
	(Bug#17892)

	* xdisp.c (display_line, display_mode_line): Call
	prepare_desired_row with additional arguments, as appropriate.

	* dispextern.h (prepare_desired_row): Adjust prototype.

2014-07-01  Dmitry Antipov  <dmantipov@yandex.ru>

	* xfaces.c (init_frame_faces): Always realize basic faces (Bug#17889).
	* menu.c (Fx_popup_dialog): Set Vmenu_updating_frame to avoid crash
	caused by xw_popup_dialog in daemon mode (Bug#17891).

2014-06-30  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (do_switch_frame): When switching to another TTY frame,